Prelim final volunteers

--- a/slides.html
+++ b/slides.html
@@ -321,72 +321,58 @@
   <h1 class="title">nÜkraine slides</h1>
 </section>
 
+<section id="volunteering-in-the-times-of-war-what-data-can-tell-us" class="slide level2">
+<h2>Volunteering in the times of war: what data can tell us</h2>
+</section>
 <section class="slide level2">
 
-<div class="cell">
-
-</div>
-<div class="cell">
-
-</div>
+<h3 id="how-many-people-in-ukraine-become-volunteers-since-24.02">How many people in Ukraine become volunteers since 24.02</h3>
+<ul>
+<li><p>Since February 24, more than 60% of people in Central and Western regions of Ukraine became volunteers.</p></li>
+<li><p>They helped either physically or financially or both.</p></li>
+<li><p>Around 15% of people said they <strong>would</strong> help. Only 25% of people said they had not helped and would not do so.</p></li>
+</ul>
 </section>
-<section id="volunteering-in-the-times-of-war-what-data-can-tell-us" class="title-slide slide level1 center">
-<h1>Volunteering in the times of war: what data can tell us</h1>
+<section class="slide level2">
 
+<h3 id="how-many-people-in-ukraine-become-volunteers-since-24.02-1">How many people in Ukraine become volunteers since 24.02</h3>
+
+<img data-src="slides_files/figure-revealjs/unnamed-chunk-6-1.png" width="960" class="r-stretch"></section>
+<section class="slide level2">
+
+<h3 id="how-many-volunteers-lost-their-jobs">How many volunteers lost their jobs</h3>
+<ul>
+<li><p>Around a half of those who volunteered did not lose their jobs.</p></li>
+<li><p>Up to 10% of volunteers said they lost their jobs.</p></li>
+<li><p>Another 10% of them did not lose their jobs because they did not have ones.</p></li>
+</ul>
 </section>
+<section class="slide level2">
 
-<section id="how-many-people-in-ukraine-become-volunteers-since-24.02" class="title-slide slide level1 center">
-<h1>How many people in Ukraine become volunteers since 24.02</h1>
+<h3 id="how-many-volunteers-lost-their-jobs-1">How many volunteers lost their jobs</h3>
 
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-6-1.png" width="960" class="r-stretch"><p>TEXT around 70% became volunteers</p>
+<img data-src="slides_files/figure-revealjs/unnamed-chunk-8-1.png" width="960" class="r-stretch"></section>
+<section class="slide level2">
+
+<h3 id="how-many-volunteers-came-back-to-work-beacuse-they-were-out-of-money">How many volunteers came back to work beacuse they were out of money</h3>
+<ul>
+<li>NO INFO found</li>
+</ul>
 </section>
+<section class="slide level2">
 
-<section id="how-many-volunteers-lost-their-jobs" class="title-slide slide level1 center">
-<h1>How many volunteers lost their jobs</h1>
-
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-8-1.png" width="960" class="r-stretch"><p>Among volunteers, x% lost their jobs</p>
+<h3 id="how-many-ngo-were-created">How many NGO were created</h3>
+<ul>
+<li><p>Prior to the Russian invasion of Ukraine there <a href="https://www.humanitarianoutcomes.org/sites/default/files/publications/ukraine_review_2022.pdf">were</a> about <strong>150 active national NGOs</strong> involved in humanitarian aid.</p></li>
+<li><p>Three months after February 24, approximately <strong>2400 new groups</strong> <a href="https://business.diia.gov.ua/cases/novini/ukrainskij-biznes-v-umovah-vijni-analitika-stanu-za-3-misaci">were registered</a> as “charitable foundations or public organisations”.</p></li>
+</ul>
 </section>
+<section class="slide level2">
 
-<section id="how-many-volunteers-came-back-to-work-beacuse-they-were-out-of-money" class="title-slide slide level1 center">
-<h1>How many volunteers came back to work beacuse they were out of money</h1>
-<p>No info</p>
-</section>
-
-<section>
-<section id="how-many-ngo-were-created" class="title-slide slide level1 center">
-<h1>How many NGO were created</h1>
-<p>Prior to the Russian invasion of Ukraine there <a href="https://www.humanitarianoutcomes.org/sites/default/files/publications/ukraine_review_2022.pdf">were</a> about <strong>150 active national NGOs</strong> involved in humanitarian aid.</p>
-<p>Three months after February 24, approximately <strong>2400 new groups</strong> <a href="https://business.diia.gov.ua/cases/novini/ukrainskij-biznes-v-umovah-vijni-analitika-stanu-za-3-misaci">were registered</a> as “charitable foundations or public organisations”.</p>
-</section>
 <h3 id="how-much-money-were-donated-by-people-of-different-countries-to-ukraine">How much money were donated by people of different countries to Ukraine</h3>
-<p>Since February 24, 992 grants worth $1,228,860,746 <a href="https://topics.candid.org/issue-pages/ukraine/#tab-nav">were donated</a> to Ukraine.</p></section>
-<section id="data-on-ukraine" class="title-slide slide level1 center">
-<h1>Data on Ukraine</h1>
-
-</section>
-
-<section id="google-search-ukraine" class="title-slide slide level1 center">
-<h1>Google search Ukraine</h1>
-
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-10-1.png" width="960" class="r-stretch"></section>
-
-<section id="donations-to-ukraine-in-usd" class="title-slide slide level1 center">
-<h1>Donations to Ukraine in usd</h1>
-
-</section>
-
-<section id="humanitarian-help-in-tonnes" class="title-slide slide level1 center">
-<h1>Humanitarian help in tonnes</h1>
-
-</section>
-
-<section id="military-support-in-vehicles" class="title-slide slide level1 center">
-<h1>Military support in vehicles</h1>
-
-</section>
-
-<section id="investments-in-ukraine-usd" class="title-slide slide level1 center">
-<h1>Investments in Ukraine (USD)</h1>
+<ul>
+<li>Since February 24, 992 grants worth $1,228,860,746 <a href="https://topics.candid.org/issue-pages/ukraine/#tab-nav">were donated</a> to Ukraine.</li>
+</ul>
 <div class="footer footer-default">
 
 </div>
